🚀 1단계 - 단위 테스트 작성 (#351)
* test : line 도메인 단위테스트 작성.

* test : mockito를 사용한 linServiceTest 작성.

* test : 실제객체를 사용한 linServiceTest 작성.

* feat : 테스트 편의를 위한 생성자 추가.

* test : 테스트코드 리팩토링.